Implementing the second request functionality

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -17,6 +17,7 @@
             </li>
           <% }); %>
         </ul>
+        <a href="/skills/new">Add Skills</a>
       </body>
 </body>
 </html>
