--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -6,6 +6,9 @@
     <title>Express</title>
 </head>
 <body>
+    <a href="/">Home</a>
+    |
+    <a href="/skills">Back</a>
     <h3><%= skill.skill %></h3>
     <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
 </body>
