--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -7,6 +7,7 @@
   <title>Express Dev Skills</title>
 </head>
 <body>
+  <a href="/">Home</a>
   <h1>Dev Skills</h1>
   <ul>
     <% skills.forEach(function(s) { %>
