--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Express Dev Skills</title>
-</head>
-<body>
-  <a href="/">Home</a>
-  <h1>Dev Skills</h1>
+<%- include('../partials/header') %>
+
   <ul>
     <% skills.forEach(function(s) { %>
       <li>
@@ -24,14 +15,6 @@
       </li>
     <% }); %>
   </ul>
-  <!-- <a href="/skills/new">Add New Skill</a> -->
-  <h3>Add New Skill</h3>
+  <a href="/skills/new">Add New Skill</a>
 
-<form action="/skills" method="POST" autocomplete="off">
-  <input type="text" name="skill">
-  <button type="submit">Save Skill</button>
-</form>
-
-
-</body>
-</html>
+<%- include('../partials/footer') %>
